# translator

./: .html  README.md  avg.html  index.html  package-lock.json  package.json  pcg.html  pug.html  tailwind.config.ts  template.html  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  rustlate.rs
src/cmds/: index.ts
src/lang/: index.ts
src/message/: index.ts
src/pages/avg/: App.tsx
src/pages/index/: App.tsx  Translator.tsx
src/pages/pcg/: App.tsx
src/pug/: App.tsx  main.tsx
src/utils/: index.ts
